--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JavaScript</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: #1c1b21; text-align: center">
+    <img src="./Img/logo.svg" alt="logo">
+    <div class="panel">L love JavaScript</div>
+    <input class="input" />
+    <button class="button">Change</button>
 <script src="app.js"></script>
 </body>
 </html>
