--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="./Img/logo.svg" alt="logo">
     <div class="panel">L love JavaScript</div>
     <input class="input" />
-    <button class="button">Change</button>
+    <button class="button" onclick="changeClick()">Change</button>
 <script src="app.js"></script>
 </body>
 </html>
