--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body style="background-color: #1c1b21; text-align: center">
     <img src="./Img/logo.svg" alt="logo">
     <div class="panel">L love JavaScript</div>
-    <input class="input" />
-    <button class="button" onclick="changeClick()">Change</button>
+    <input class="input" onkeydown="inputChanged(event)" />
+    <button class="button" onclick="submitForm()">Change</button>
 <script src="app.js"></script>
 </body>
 </html>
