Working with styles and classes(17)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body style="background-color: #1c1b21; text-align: center">
     <img src="./Img/logo.svg" alt="logo">
-    <div class="panel">L love JavaScript</div>
+    <div class="panel">I love this</div>
     <input class="input" onkeydown="inputChanged(event)" />
     <button class="button" onclick="submitForm()">Change</button>
+    <div class="notification notification_hide">Changed!</div>
 <script src="app.js"></script>
 </body>
 </html>
