--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
     <input class="input" onkeydown="inputChanged(event)" />
     <button class="button" onclick="submitForm()">Change</button>
     <div class="notification notification_hide">Changed!</div>
-    <div class="one">
-        <span>Элемент 1</span>
-    </div>
-    <div class="one">
-        <span>Элемент 2</span>
-    </div>
-    <div id="two">Элемент 3</div>
-    <div>
-        <span user-id="4">Элемент 4</span>
-    </div>
+    <div class="test"></div>
+<!--    <div class="one">-->
+<!--        <span>Элемент 1</span>-->
+<!--    </div>-->
+<!--    <div class="one">-->
+<!--        <span>Элемент 2</span>-->
+<!--    </div>-->
+<!--    <div id="two">Элемент 3</div>-->
+<!--    <div>-->
+<!--        <span user-id="4">Элемент 4</span>-->
+<!--    </div>-->
 <script src="app.js"></script>
 </body>
 </html>
